Add MDB Angular

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,4 @@
 <h1>HomeComponent</h1>
 <router-outlet></router-outlet>
+
+<button type="button" class="btn btn-outline-primary" mdbWavesEffect>Primary</button>
