--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,20 @@
 <h1>HomeComponent</h1>
-<router-outlet></router-outlet>
 
-<button type="button" class="btn btn-outline-primary" mdbWavesEffect>Primary</button>
+
+<div class="row" style="margin: auto">
+  <div class="col col-md-9" style="border-radius: 10px; border: solid #000000; margin-left: 1%">
+
+
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+
+  </div>
+  <div class="col-6 col-md-2" style="border-radius: 10px; border: solid #000000; margin-left: 1%; padding-left: 21%;">
+
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+  </div>
+  <input class="form-control" type="text" style="border-radius: 10px; border: solid #000000; margin-left: 1%; margin-right: 1%">
+</div>
+
+<router-outlet></router-outlet>
