--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
+<mat-toolbar color="primary">
+  <div layout="row" layout-align="center center" flex>
+    SARA
+  </div>
+</mat-toolbar>
+
 <router-outlet></router-outlet>
 
 <mat-toolbar color="primary">
