--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,9 +6,8 @@
 
 <router-outlet></router-outlet>
 
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" class="page-footer font-small mt-4">
   <div layout="row" layout-align="center center" flex>
     &copy; SARA-Angular
   </div>
 </mat-toolbar>
-
