--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,18 +1,12 @@
-#colRight {
-   border-radius: 10px;
-   border: solid 1px #000000;
-   margin-left: 1%;
- }
-
-#colLeft {
-  border-radius: 10px;
-  border: solid 1px #000000;
-  margin-left: 1%;
-  padding-left: 21%;
+.size{
+  height: calc(28em + 1vw);
 }
 
-#code {
-  border-radius: 10px;
-  border: solid #000000;
-  margin: 1% 1% 1% 1%;
+.scroll{
+  overflow-y: scroll;
+}
+
+#textHeader {
+  text-align: center;
+  color: white;
 }
