--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,19 +2,17 @@
 
 
 <div class="row" style="margin: auto">
-  <div class="col col-md-9" style="border-radius: 10px; border: solid #000000; margin-left: 1%">
+  <div class="col col-md-9" id="colRight">
 
-
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
+    <br><br><br><br><br><br><br><br>
 
   </div>
-  <div class="col-6 col-md-2" style="border-radius: 10px; border: solid #000000; margin-left: 1%; padding-left: 21%;">
+  <div class="col-6 col-md-2" id="colLeft">
 
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br>
 
   </div>
-  <input class="form-control" type="text" style="border-radius: 10px; border: solid #000000; margin-left: 1%; margin-right: 1%">
+  <input class="form-control" type="text" id="code" placeholder="code..">
 </div>
 
 <router-outlet></router-outlet>
