--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <h1>HomeComponent</h1>
 
-
+<graph [nodes]="nodes" [links]="links"></graph>
 <div class="row" style="margin: auto">
   <div class="col col-md-9" id="colRight">
 
