--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,8 +2,9 @@
 
 <div class="row no-gutters container-fluid">
   <div class="col-8 border rounded size">
-    <span>321</span>
-    <graph [nodes]="nodes" [links]="links"></graph>
+     <div class="visualization">
+         <app-graph [nodes]="nodes" [links]="links"></app-graph>
+     </div>
   </div>
   <div class="col-4 border rounded size scroll">
     <div class="bg-info border rounded" id="textHeader"><p>Unidades sin relacionar</p></div>
