--- a/src/app/home/visuals/shared/show-node/show-node.component.css
+++ b/src/app/home/visuals/shared/show-node/show-node.component.css
@@ -1,17 +1,9 @@
 .node {
-    cursor: pointer;
-    transition: stroke-width 0.1s ease-out,
-        fill 0.1s ease-out,
-        stroke 0.1s ease-out;
-
-    stroke: white;
-    stroke-width: 0.25;
+    fill: #007BB2;
+    height: 10%;
+    width: 15%;
 }
 
 .node-name {
-  font-family: 'Lato';
-  text-anchor: middle;
-  alignment-baseline: central;
-  font-weight: 300;
   fill: white;
 }
