--- a/src/app/home/visuals/shared/show-link/show-link.component.html
+++ b/src/app/home/visuals/shared/show-link/show-link.component.html
@@ -1,7 +1,7 @@
 <svg:line
         class="link"
-        [attr.x1]="link.source.x"
+        [attr.x1]="link.source.x + 50"
         [attr.y1]="link.source.y"
-        [attr.x2]="link.target.x"
+        [attr.x2]="link.target.x + 50"
         [attr.y2]="link.target.y"
 ></svg:line>
