--- a/src/app/home/visuals/shared/show-node/show-node.component.html
+++ b/src/app/home/visuals/shared/show-node/show-node.component.html
@@ -1,5 +1,5 @@
 <svg:g [attr.transform]="'translate(' + node.x + ',' + node.y + ')'">
-      <svg:rect class="node">
+      <svg:rect class="node" height="10%" width="15%">
       </svg:rect>
       <svg:text [attr.transform]="'translate(30,30)'"
           class="node-name">
