--- a/src/app/home/visuals/graph/graph.component.html
+++ b/src/app/home/visuals/graph/graph.component.html
@@ -1,7 +1,7 @@
 <svg #svg class="graph" [attr.width]="800" [attr.height]="400">
-    <g [zoomableOf]="svg">
+   <!-- <g [zoomableOf]="svg">-->
       <g [showLink]="link" *ngFor="let link of links"></g>
-      <g [showNode]="node" *ngFor="let node of nodes"
-          [draggableNode]="node" [draggableInGraph]="graph"></g>
-    </g>
+      <g [showNode]="node" *ngFor="let node of nodes"></g>
+  <!--   [draggableNode]="node" [draggableInGraph]="graph"></g>
+<!--</g>-->
 </svg>
