--- a/src/app/home/visuals/graph/graph.component.html
+++ b/src/app/home/visuals/graph/graph.component.html
@@ -1,4 +1,4 @@
-<svg #svg class="graph" [attr.width]="800" [attr.height]="400">
+<svg #svg class="col-8 graph" [attr.width]="800" [attr.height]="400">
     <g [zoomableOf]="svg">
       <g [showLink]="link" *ngFor="let link of links"></g>
       <g [showNode]="node" *ngFor="let node of nodes"
