--- a/src/app/home/visuals/shared/show-node/show-node.component.html
+++ b/src/app/home/visuals/shared/show-node/show-node.component.html
@@ -1,7 +1,7 @@
 <svg:g [attr.transform]="'translate(' + node.x + ',' + node.y + ')'">
-      <svg:rect class="node" height="10%" width="15%">
+      <svg:rect class="node" height="30" width="150">
       </svg:rect>
-      <svg:text [attr.transform]="'translate(30,30)'"
+      <svg:text [attr.transform]="'translate(30,20)'"
           class="node-name">
         {{node.id}}
       </svg:text>
