--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,29 @@
-<h1>HomeComponent</h1>
-
-<div class="row no-gutters container-fluid">
-  <div class="col-8 border rounded size">
+<div class="layout-alignment"></div>
+<div fxLayout="row" fxLayoutGap="20px" style="background-color: #eee">
+  <div fxFlex>
+    <mat-card>
+      <mat-toolbar color="accent">
+        <mat-toolbar-row>
+          <span style="color: white">Grafo de unidades</span>
+        </mat-toolbar-row>
+      </mat-toolbar>
       <app-graph [nodes]="nodes" [links]="links"></app-graph>
+    </mat-card>
   </div>
-  <div class="col-4 border rounded size scroll">
-    <div class="bg-info border rounded" id="textHeader"><p>Unidades sin relacionar</p></div>
-  </div>
-  <input #box class="form-control-lg border rounded container-fluid" type="text" placeholder="code.." (keyup.enter)="onEnter(box.value)">
+  <mat-card class="scroll">
+    <mat-toolbar color="accent">
+      <mat-toolbar-row>
+        <span style="color: white">Unidades sin relacionar</span>
+      </mat-toolbar-row>
+    </mat-toolbar>
+  </mat-card>
 </div>
+<div class="layout-alignment"></div>
+<mat-card>
+  <mat-card-title>Consola</mat-card-title>
+  <mat-form-field class="full-width">
+    <input matInput #box type="text" class="full-width" (keyup.enter)="onEnter(box.value)">
+  </mat-form-field>
+</mat-card>
+<div class="layout-alignment"></div>
 <router-outlet></router-outlet>
