--- a/src/app/home/d3/visuals/show-link/show-link.component.html
+++ b/src/app/home/d3/visuals/show-link/show-link.component.html
@@ -5,5 +5,5 @@
         [attr.x2]="link.target.x"
         [attr.y2]="link.target.y"
 ></svg:line>
-<svg:polyline [attr.points]="link.points" stroke="black" stroke-width="3"
+<svg:polyline [attr.points]="link.points.toString()" stroke="black" stroke-width="3"
         stroke-linecap="round" fill="none" stroke-linejoin="round"/> 
