--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,13 @@
 <mat-card>
   <mat-card-title>Consola</mat-card-title>
   <mat-form-field class="full-width">
-    <input matInput #box type="text" class="full-width" (keyup.enter)="onEnter(box.value)">
+    <input matInput #box type="text" class="full-width" (keyup.enter)="onEnter(box.value)" [formControl]="searchTerm"
+           [matAutocomplete]="auto">
+    <mat-autocomplete #auto="matAutocomplete">
+      <mat-option *ngFor="let option of searchResult | async" [value]="option">
+        {{ option }}
+      </mat-option>
+    </mat-autocomplete>
   </mat-form-field>
 </mat-card>
 <div class="layout-alignment"></div>
