--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 
 <router-outlet></router-outlet>
 
-<mat-toolbar color="primary" class="page-footer font-small mt-4">
+<mat-toolbar color="primary">
   <div layout="row" layout-align="center center" flex>
     &copy; SARA-Angular
   </div>
