--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -12,3 +12,11 @@
   display: block;
   background-color: #eee;
 }
+
+span {
+  color: #ffffff;
+}
+
+#separator-line{
+  background-color: #eee;
+}
