Units not related

--- a/src/app/home/d3/visuals/show-node/show-node.component.html
+++ b/src/app/home/d3/visuals/show-node/show-node.component.html
@@ -1,7 +1,7 @@
 <svg:g [attr.transform]="'translate(' + node.x + ',' + node.y + ')'">
       <svg:rect class="node" height="30" width="150">
       </svg:rect>
-      <svg:text [attr.transform]="'translate(30,20)'"
+      <svg:text [attr.transform]="'translate(75,17)'" alignment-baseline="middle" text-anchor="middle"
           class="node-name">
         {{node.id}}
       </svg:text>
