--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,7 +27,8 @@
            [matAutocomplete]="auto">
     <mat-autocomplete #auto="matAutocomplete" disabled>
       <mat-option *ngFor="let relationUnit of filteredUnits | async" [value]="relationUnit.name">
-        {{ relationUnit.name }} &nbsp;  <i><b>{{relationUnit.topUnit.name}}</b></i>
+        <div *ngIf="relationUnit.topUnit?.name != undefined"><b>#{{relationUnit.id}}</b> &nbsp; {{ relationUnit.name }} &nbsp; &nbsp; &nbsp; <i><b>{{relationUnit.topUnit.name}}</b></i></div>
+        <div *ngIf="relationUnit.topUnit?.name == undefined"><b>#{{relationUnit._id}}</b> &nbsp; {{ relationUnit.name }}</div>
       </mat-option>
     </mat-autocomplete>
   </mat-form-field>
