--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,8 +27,8 @@
            [matAutocomplete]="auto">
     <mat-autocomplete #auto="matAutocomplete" disabled>
       <mat-option *ngFor="let relationUnit of filteredUnits | async" [value]="relationUnit.name">
-        <div *ngIf="relationUnit.topUnit?.name != undefined"> {{ relationUnit.name }}<b>#{{relationUnit.id}}</b> &nbsp; &nbsp; &nbsp; <i><b>{{relationUnit.topUnit.name}}</b></i></div>
-        <div *ngIf="relationUnit.topUnit?.name == undefined"> {{ relationUnit.name }}<b>#{{relationUnit._id}}</b></div>
+        <div *ngIf="relationUnit.topUnit?.name != undefined"> {{ relationUnit.name }}<strong>#{{relationUnit.id}}</strong> &nbsp; &nbsp; &nbsp; <em><strong>{{relationUnit.topUnit.name}}</stromg></em></div>
+        <div *ngIf="relationUnit.topUnit?.name == undefined"> {{ relationUnit.name }}<strong>#{{relationUnit._id}}</strong></div>
       </mat-option>
     </mat-autocomplete>
   </mat-form-field>
