--- a/src/app/home/d3/visuals/show-link/show-link.component.css
+++ b/src/app/home/d3/visuals/show-link/show-link.component.css
@@ -1,4 +1,12 @@
 .link {
     stroke-width: 3;
     stroke: #FF9A23;
+    fill: none;
+}
+
+.relation {
+    stroke-width: 3;
+    stroke: #FF9A23;
+    stroke-linecap: round;
+    stroke-linejoin: round;
 }
