--- a/src/app/home/d3/visuals/show-link/show-link.component.html
+++ b/src/app/home/d3/visuals/show-link/show-link.component.html
@@ -1,9 +1,2 @@
-<svg:line
-        class="link"
-        [attr.x1]="link.source_middle"
-        [attr.y1]="link.source_height"
-        [attr.x2]="link.target_middle"
-        [attr.y2]="link.target.y"
-></svg:line>
-<svg:polyline [attr.points]="link.points.toString()" stroke="black" stroke-width="3"
-        stroke-linecap="round" fill="none" stroke-linejoin="round"/> 
+<svg:polyline class="link" [attr.points]="link.link_points.toString()"/> 
+<svg:polyline class="relation" [attr.points]="link.relation_points.toString()" [attr.fill]="link.relationColor"/> 
