One relation for unit

--- a/src/app/home/d3/visuals/show-link/show-link.component.html
+++ b/src/app/home/d3/visuals/show-link/show-link.component.html
@@ -1,2 +1,2 @@
-<svg:polyline class="link" [attr.points]="link.link_points.toString()"/> 
-<svg:polyline class="relation" [attr.points]="link.relation_points.toString()" [attr.fill]="link.relationColor"/> 
+<svg:polyline class="link" [attr.points]="link.linkPoints.toString()"/> 
+<svg:polyline class="relation" [attr.points]="link.relationPoints.toString()" [attr.fill]="link.relationColor"/> 
