--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
       <app-graph [nodes]="nodes" [links]="links"></app-graph>
     </mat-card>
   </div>
-  <mat-card class="units-card" class="scroll">
+  <mat-card class="units-card scroll">
     <mat-toolbar color="accent">
       <mat-toolbar-row>
         <span>Unidades sin relacionar</span>
