--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,8 +27,8 @@
            [matAutocomplete]="auto">
     <mat-autocomplete #auto="matAutocomplete" >
       <mat-option *ngFor="let relationUnit of filteredUnits | async" [value]="relationUnit.name">
-        <div *ngIf="relationUnit.topUnit?.name != undefined"> {{ relationUnit.name }}<strong>#{{relationUnit._id}}</strong> &nbsp; &nbsp; &nbsp; <em><strong>{{relationUnit.topUnit.name}}</strong></em></div>
-        <div *ngIf="relationUnit.topUnit?.name == undefined"> {{ relationUnit.name }}<strong>#{{relationUnit._id}}</strong></div>
+        <div *ngIf="relationUnit.topUnit?.name != undefined"> {{ relationUnit.name }}<strong>#{{relationUnit.code}}</strong> &nbsp; &nbsp; &nbsp; <em><strong>{{relationUnit.topUnit}}</strong></em></div>
+        <div *ngIf="relationUnit.topUnit?.name == undefined"> {{ relationUnit.name }}<strong>#{{relationUnit.code}}</strong></div>
       </mat-option>
     </mat-autocomplete>
   </mat-form-field>
