--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,3 @@
-<h1>¡Welcome to Santa Tecla!</h1>
-<button mat-raised-button color="accent" >Student</button>
-<button mat-raised-button color="accent"(click)="teacher()" >Teacher</button>
+<h1>¡Bienvenido a Santa Tecla!</h1>
+<button mat-raised-button color="accent" >Alumno</button>
+<button mat-raised-button color="accent"(click)="teacher()" >Profesor</button>
