--- a/src/app/teacher/teacher.component.html
+++ b/src/app/teacher/teacher.component.html
@@ -27,7 +27,7 @@
            [matAutocomplete]="auto">
     <mat-autocomplete #auto="matAutocomplete" >
       <mat-option *ngFor="let relationUnit of filteredUnits| async" [value]="relationUnit.name.concat('#' + relationUnit.code)">
-        <div *ngIf="relationUnit.topUnit?.name != undefined"> {{ relationUnit.name }}<strong>#{{relationUnit.code}}</strong> &nbsp; &nbsp; &nbsp; <em><strong>{{relationUnit.topUnit}}</strong></em></div>
+        <div *ngIf="relationUnit.topUnit?.name != undefined"> {{ relationUnit.name }}<strong>#{{relationUnit.code}}</strong> &nbsp; &nbsp; &nbsp; <em><strong>{{relationUnit.topUnit.name}}</strong></em></div>
         <div *ngIf="relationUnit.topUnit?.name == undefined"> {{ relationUnit.name }}<strong>#{{relationUnit.code}}</strong></div>
       </mat-option>
     </mat-autocomplete>
