--- a/src/app/teacher/d3/views/units-not-related/units-not-related.component.html
+++ b/src/app/teacher/d3/views/units-not-related/units-not-related.component.html
@@ -1,4 +1,3 @@
-<svg #svg width="100%" height="100%">
+<svg #svg width="300" height="250%">
     <g [showNode]="node" *ngFor="let node of nodes"></g>
  </svg>
- 
