Refactoring html botton student and teacher

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,8 @@
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <span>SARA</span>
+  </mat-toolbar-row>
+</mat-toolbar>
 <h1>¡Bienvenido a Santa Tecla!</h1>
-<button mat-raised-button color="accent" >Alumno</button>
-<button mat-raised-button color="accent"(click)="teacher()" >Profesor</button>
+<button mat-raised-button color="accent" (click)="student()" >Alumno</button>
+<button mat-raised-button color="accent" (click)="teacher()" >Profesor</button>
