--- a/src/app/teacher/teacher.component.html
+++ b/src/app/teacher/teacher.component.html
@@ -1,3 +1,13 @@
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <span>SARA</span>
+    <span class="spacer"></span>
+    <button mat-button (click)="student()">
+      <mat-icon>person</mat-icon>
+      <span>Alumno</span>
+    </button>
+  </mat-toolbar-row>
+</mat-toolbar>
 <div class="layout-alignment"></div>
 <div id="separator-line" fxLayout="row" fxLayoutGap="20px">
   <div fxFlex>
