--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,17 @@
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <span>SARA</span>
+    <span class="spacer"></span>
+    <button mat-button (click)="teacher()">
+      <mat-icon>person</mat-icon>
+      <span>Profesor</span>
+    </button>
+    <button mat-button (click)="student()">
+      <mat-icon>person</mat-icon>
+      <span>Alumno</span>
+    </button>
+  </mat-toolbar-row>
+</mat-toolbar>
 <router-outlet></router-outlet>
 
 <mat-toolbar color="primary">
