Color button teacher and student

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,11 @@
   <mat-toolbar-row>
     <span>SARA</span>
     <span class="spacer"></span>
-    <button mat-button (click)="teacher()">
+    <button mat-button (click)="teacher()" id="teacher">
       <mat-icon>person</mat-icon>
       <span>Profesor</span>
     </button>
-    <button mat-button (click)="student()">
+    <button mat-button (click)="student()" id="student">
       <mat-icon>person</mat-icon>
       <span>Alumno</span>
     </button>
