--- a/src/app/teacher/graph-unit/graph-unit.component.css
+++ b/src/app/teacher/graph-unit/graph-unit.component.css
@@ -1,3 +1,11 @@
+.scroll {
+  overflow-y: scroll;
+}
+
+.full-width {
+  width: 100%;
+}
+
 .layout-alignment {
   min-height: 10px;
   padding-bottom: 10px;
@@ -5,7 +13,16 @@
   background-color: #eee;
 }
 
+span {
+  color: #ffffff;
+}
+
+.units-card {
+  padding: 0;
+}
+
 #separator-line{
   background-color: #eee;
 }
+
 
