--- a/src/app/teacher/teacher.component.html
+++ b/src/app/teacher/teacher.component.html
@@ -1,37 +1,10 @@
 <div class="layout-alignment"></div>
 <div id="separator-line" fxLayout="row" fxLayoutGap="20px">
   <div fxFlex>
-    <mat-card class="units-card">
-      <mat-toolbar color="accent">
-        <mat-toolbar-row>
-          <span>Grafo de unidades</span>
-        </mat-toolbar-row>
-      </mat-toolbar>
-      <app-graph [nodes]="nodes" [links]="links"></app-graph>
-    </mat-card>
+    <app-graph-unit></app-graph-unit>
   </div>
-  <mat-card class="units-card scroll">
-    <mat-toolbar color="accent">
-      <mat-toolbar-row>
-        <span>Unidades sin relacionar</span>
-      </mat-toolbar-row>
-    </mat-toolbar>
-    <app-units-not-related [nodes]="nodesNotRelated" ></app-units-not-related>
-  </mat-card>
+  <div fxFlex>
+    <app-info-unit></app-info-unit>
+  </div>
 </div>
-<div class="layout-alignment"></div>
-<mat-card>
-  <mat-card-title>Consola</mat-card-title>
-  <mat-form-field class="full-width">
-    <input matInput #box type="text" class="full-width" (keyup.enter)="onEnter(box.value)" [formControl]="searchUnit"
-           [matAutocomplete]="auto" [value]="text">
-    <mat-autocomplete #auto="matAutocomplete" >
-      <mat-option *ngFor="let relationUnit of filteredUnits| async" [value]="valueText()" (onSelectionChange)="onAddHelp($event, relationUnit.unit.name.concat('#' + relationUnit.unit.code), box.value)">
-        <div *ngIf="relationUnit.topUnit?.name != undefined"> {{ relationUnit.unit.name }}<strong>#{{relationUnit.unit.code}}</strong> &nbsp; &nbsp; &nbsp; <em><strong>{{relationUnit.topUnit.name}}</strong></em></div>
-        <div *ngIf="relationUnit.topUnit?.name == undefined"> {{ relationUnit.unit.name }}<strong>#{{relationUnit.unit.code}}</strong></div>
-      </mat-option>
-    </mat-autocomplete>
-  </mat-form-field>
-</mat-card>
-<div class="layout-alignment"></div>
 <router-outlet></router-outlet>
