--- a/src/app/teacher/graph-unit/d3/views/units-not-related/units-not-related.component.html
+++ b/src/app/teacher/graph-unit/d3/views/units-not-related/units-not-related.component.html
@@ -1,3 +1,3 @@
-<svg #svg width="300" height="250%">
+<svg #svg width="250%" height="55">
     <g [showNode]="node" *ngFor="let node of nodes"></g>
  </svg>
