Units not related

--- a/src/app/teacher/graph-unit/graph-unit.component.css
+++ b/src/app/teacher/graph-unit/graph-unit.component.css
@@ -25,4 +25,9 @@ span {
   background-color: #eee;
 }
 
+#col-title-not-related{
+  background-color: #007BB2;
+  color: #ffffff;
+  text-align: center;
+}
 
