--- a/src/app/teacher/info-unit/info-unit.component.html
+++ b/src/app/teacher/info-unit/info-unit.component.html
@@ -20,8 +20,12 @@
   <mat-tab-group>
     <mat-tab label="Itinerario 1">
       <mat-card *ngFor="let value of values">
+        <mat-action-row>
+          <button *ngIf="value == 0" mat-raised-button color="primary" class="button-content" (click)="visibilityLesson()"><mat-icon>add_circle_outline</mat-icon>
+            Añadir sesión</button>
+        </mat-action-row>
         <mat-card-content>
-          <mat-card class="lesson" id="card_lesson">
+          <mat-card class="" id="card_lesson">
             <mat-card-content>
               <mat-card id="card_cont_lesson">
                 <mat-card-content>
@@ -39,9 +43,6 @@
             </mat-action-row>
           </mat-card>
         </mat-card-content>
-        <mat-action-row>
-          <button mat-raised-button color="primary" class="button-content" (click)="visibilityLesson()">Añadir sesión</button>
-        </mat-action-row>
       </mat-card>
     </mat-tab>
     <mat-tab>
