Load file commands

--- a/src/app/teacher/graph-unit/graph-unit.component.html
+++ b/src/app/teacher/graph-unit/graph-unit.component.html
@@ -36,6 +36,7 @@
           </mat-option>
         </mat-autocomplete>
       </mat-form-field>
+      <input type="file" name="file" id="file">
     </mat-card>
   </div>
 </div>
