--- a/src/app/teacher/info-unit/info-unit.component.html
+++ b/src/app/teacher/info-unit/info-unit.component.html
@@ -18,17 +18,19 @@
     </mat-panel-title>
   </mat-expansion-panel-header>
   <mat-tab-group>
-    <mat-tab *ngFor="let itinerary of itinerarys" label={{itinerary.getName()}}>
-      <!--<mat-action-row>
-        <button mat-raised-button color="primary" class="button-content" (click)="visibilityLesson()"><mat-icon>add_circle_outline</mat-icon>
+    <mat-tab *ngFor="let itinerary of itinerarys; let i = index" label={{itinerary.getName()}}>
+      <mat-action-row>
+        <button mat-raised-button color="primary" class="button-content" (click)="addSession(i)"><mat-icon>add_circle_outline</mat-icon>
               Añadir sesión</button>
         </mat-action-row>
-      <mat-card *ngFor="let session of sessions; let i = index">
+      <mat-card *ngFor="let session of itinerary.getFormations(); let j = index">
+        <h4>{{session.getName()}}</h4>
         <mat-card-content>
           <mat-action-row>
-            <button mat-raised-button color="primary" class="button-content" (click)="visibility(i)"><mat-icon>add_circle_outline</mat-icon> Añadir lección</button>
+            <button mat-raised-button color="primary" class="button-content" (click)="addLesson(i,j)"><mat-icon>add_circle_outline</mat-icon> Añadir lección</button>
           </mat-action-row>
-          <mat-card *ngFor="let lesson of toArray(session)" class="" id="card_lesson">
+          <mat-card *ngFor="let lesson of session.getLessons()" class="" id="card_lesson">
+            <h4>{{lesson.getName()}}</h4>
             <mat-card-content>
               <mat-card id="card_cont_lesson">
                 <mat-card-content>
@@ -43,7 +45,7 @@
             </mat-card-content>
           </mat-card>
         </mat-card-content>
-      </mat-card>-->
+      </mat-card>
     </mat-tab>
     <mat-tab>
       <ng-template mat-tab-label>
