--- a/src/app/teacher/info-unit/input-dialog.component.html
+++ b/src/app/teacher/info-unit/input-dialog.component.html
@@ -1,10 +1,10 @@
 <div mat-dialog-content>
-  <p>Nombre del itinerario</p>
+  <p>{{data.message}}</p>
   <mat-form-field>
     <input matInput [(ngModel)]="data.name">
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">No Thanks</button>
+  <button mat-button (click)="onNoClick()">Cancelar</button>
   <button mat-button [mat-dialog-close]="data.name" cdkFocusInitial>Guardar</button>
 </div>
