Unit between components

--- a/src/app/teacher/info-unit/info-unit.component.html
+++ b/src/app/teacher/info-unit/info-unit.component.html
@@ -1,55 +1,59 @@
-<mat-accordion>
-  <mat-expansion-panel>
+<div *ngIf="unit">
+  <mat-accordion>
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Contenido de la unidad 
+          {{unit.getName()}}
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+      <textarea matInput placeholder="Unidad: "></textarea>
+      <mat-action-row>
+        <button mat-raised-button color="primary" class="button-content">Guardar</button>
+      </mat-action-row>
+    </mat-expansion-panel>
+  </mat-accordion>
+  <mat-expansion-panel [expanded]="0">
     <mat-expansion-panel-header>
       <mat-panel-title>
-        Contenido de la unidad
+        Itinerarios
       </mat-panel-title>
     </mat-expansion-panel-header>
-    <textarea matInput placeholder="Unidad: "></textarea>
-    <mat-action-row>
-      <button mat-raised-button color="primary" class="button-content">Guardar</button>
-    </mat-action-row>
-  </mat-expansion-panel>
-</mat-accordion>
-<mat-expansion-panel [expanded]="0">
-  <mat-expansion-panel-header>
-    <mat-panel-title>
-      Itinerarios
-    </mat-panel-title>
-  </mat-expansion-panel-header>
-  <mat-tab-group>
-    <mat-tab *ngFor="let itinerary of itinerarys" label="Itinerario 1">
-      <mat-action-row>
-        <button mat-raised-button color="primary" class="button-content" (click)="visibilityLesson()"><mat-icon>add_circle_outline</mat-icon>
-              Añadir sesión</button>
-        </mat-action-row>
-      <mat-card *ngFor="let session of sessions; let i = index">
-        <mat-card-content>
-          <mat-action-row>
-            <button mat-raised-button color="primary" class="button-content" (click)="visibility(i)"><mat-icon>add_circle_outline</mat-icon> Añadir lección</button>
+    <mat-tab-group>
+      <mat-tab *ngFor="let itinerary of itinerarys" label="Itinerario 1">
+        <mat-action-row>
+          <button mat-raised-button color="primary" class="button-content" (click)="visibilityLesson()"><mat-icon>add_circle_outline</mat-icon>
+                Añadir sesión</button>
           </mat-action-row>
-          <mat-card *ngFor="let lesson of toArray(session)" class="" id="card_lesson">
-            <mat-card-content>
-              <mat-card id="card_cont_lesson">
-                <mat-card-content>
+        <mat-card *ngFor="let session of sessions; let i = index">
+          <mat-card-content>
+            <mat-action-row>
+              <button mat-raised-button color="primary" class="button-content" (click)="visibility(i)"><mat-icon>add_circle_outline</mat-icon> Añadir lección</button>
+            </mat-action-row>
+            <mat-card *ngFor="let lesson of toArray(session)" class="" id="card_lesson">
+              <mat-card-content>
+                <mat-card id="card_cont_lesson">
+                  <mat-card-content>
+  
+  
+                  </mat-card-content>
+                  <mat-action-row>
+                    <button mat-raised-button color="primary" class="button-content">Añadir video</button>
+                    <button mat-raised-button color="primary" class="button-content">Añadir ejercicio</button>
+                  </mat-action-row>
+                </mat-card>
+              </mat-card-content>
+            </mat-card>
+          </mat-card-content>
+        </mat-card>
+      </mat-tab>
+      <mat-tab>
+        <ng-template mat-tab-label>
+            <button *ngIf="itinerarys.length != 5" mat-raised-button color="primary" class="button-content" (click)="addItinerary()"><mat-icon>add_circle_outline</mat-icon></button>
+        </ng-template>
+      </mat-tab>
+    </mat-tab-group>
+  </mat-expansion-panel>
+</div>
 
-
-                </mat-card-content>
-                <mat-action-row>
-                  <button mat-raised-button color="primary" class="button-content">Añadir video</button>
-                  <button mat-raised-button color="primary" class="button-content">Añadir ejercicio</button>
-                </mat-action-row>
-              </mat-card>
-            </mat-card-content>
-          </mat-card>
-        </mat-card-content>
-      </mat-card>
-    </mat-tab>
-    <mat-tab>
-      <ng-template mat-tab-label>
-          <button *ngIf="itinerarys.length != 5" mat-raised-button color="primary" class="button-content" (click)="addItinerary()"><mat-icon>add_circle_outline</mat-icon></button>
-      </ng-template>
-    </mat-tab>
-  </mat-tab-group>
-</mat-expansion-panel>
 <router-outlet></router-outlet>
