--- a/src/app/teacher/graph-unit/graph-unit.component.css
+++ b/src/app/teacher/graph-unit/graph-unit.component.css
@@ -34,3 +34,11 @@ span {
 .mat-grid-tile .mat-figure{
   justify-content: flex-start;
 }
+
+:host {
+  display: none;
+}
+
+:host.is-open {
+  display: block;
+}
