--- a/src/app/teacher/info-unit/info-unit.component.html
+++ b/src/app/teacher/info-unit/info-unit.component.html
@@ -41,8 +41,8 @@
 
                   </mat-card-content>
                   <mat-action-row>
-                    <button mat-raised-button color="primary" class="button-content">Añadir video</button>
-                    <button mat-raised-button color="primary" class="button-content">Añadir ejercicio</button>
+                    <button mat-raised-button color="primary" class="button-content" (click)="addVideo()">Añadir video</button>
+                    <button mat-raised-button color="primary" class="button-content" (click)="addExercise()">Añadir ejercicio</button>
                   </mat-action-row>
                 </mat-card>
               </mat-card-content>
