--- a/src/app/teacher/info-unit/info-unit.component.html
+++ b/src/app/teacher/info-unit/info-unit.component.html
@@ -52,7 +52,7 @@
       </mat-tab>
       <mat-tab>
         <ng-template mat-tab-label>
-          <button *ngIf="itinerarys.length != 5" mat-raised-button color="primary" class="button-content" (click)="addItinerary()">
+          <button *ngIf="itinerarys.length != 5" mat-raised-button color="primary" id="itinerary" (click)="addItinerary()">
             <mat-icon>add_circle_outline</mat-icon>
           </button>
         </ng-template>
