--- a/src/app/teacher/exercise-unit/exercise-unit.component.css
+++ b/src/app/teacher/exercise-unit/exercise-unit.component.css
@@ -5,3 +5,15 @@
 :host.is-open {
   display: block;
 }
+
+.exercise {
+  display: flex;
+  height: 34em;
+  width: 20em;
+}
+
+.layout-alignment {
+  min-height: 10px;
+  padding-bottom: 10px;
+  display: block;
+}
