--- a/src/app/teacher/exercise-unit/exercise-unit.component.html
+++ b/src/app/teacher/exercise-unit/exercise-unit.component.html
@@ -1,6 +1,26 @@
-<mat-card>
+<mat-card style="display: flex; height: 46em;">
   <mat-tab-group>
-    <mat-tab label="Ejercicio">Content 1</mat-tab>
+    <mat-tab label="Ejercicio">
+      <div class="layout-alignment"></div>
+      <div fxLayout="row" fxLayoutGap="20px">
+        <div fxFlex>
+          <mat-card class="exercise">
+
+
+
+
+          </mat-card>
+          <mat-action-row>
+            <button mat-raised-button color="primary" class="button-content">Guardar</button>
+          </mat-action-row>
+        </div>
+        <div fxFlex>
+          <mat-card class="exercise">
+            <textarea matInput placeholder="Unidad: "></textarea>
+          </mat-card>
+        </div>
+      </div>
+    </mat-tab>
     <mat-tab label="Visor"><app-graph-unit></app-graph-unit></mat-tab>
   </mat-tab-group>
 </mat-card>
