--- a/src/app/core/cancel-yes-dialog.component.html
+++ b/src/app/core/cancel-yes-dialog.component.html
@@ -1,5 +1,5 @@
 <h3 mat-dialog-title>
-  <mat-icon color="warn">warning</mat-icon> ¿Estás seguro de eliminarlo?</h3>
+  <mat-icon color="warn">warning</mat-icon> ¿Está seguro de eliminarlo?</h3>
 <mat-dialog-actions>
   <button mat-raised-button mat-dialog-close cdkFocusInitial color="primary">Cancelar</button>
   <button mat-raised-button [mat-dialog-close]="true">Aceptar</button>
