--- a/src/app/teacher/exercise-unit/exercise-unit.component.html
+++ b/src/app/teacher/exercise-unit/exercise-unit.component.html
@@ -1,10 +1,10 @@
-<mat-card style="display: flex; height: 46em;">
+<mat-card class="mat-card-exercise">
   <mat-tab-group>
     <mat-tab label="Ejercicio">
       <div class="layout-alignment"></div>
       <div fxLayout="row" fxLayoutGap="20px">
         <div fxFlex>
-          <mat-card class="exercise">
+          <mat-card class="view-exercise">
 
 
 
@@ -15,8 +15,8 @@
           </mat-action-row>
         </div>
         <div fxFlex>
-          <mat-card class="exercise">
-            <textarea matInput placeholder="Unidad: "></textarea>
+          <mat-card class="view-exercise">
+           <!-- VISOR DE EJERCICIOS-->
           </mat-card>
         </div>
       </div>
