--- a/src/app/teacher/exercise-unit/exercise-unit.component.html
+++ b/src/app/teacher/exercise-unit/exercise-unit.component.html
@@ -5,13 +5,10 @@
       <div fxLayout="row" fxLayoutGap="20px">
         <div fxFlex>
           <mat-card class="exercise">
-
-
-
-
+            <textarea matInput placeholder="{{message}}" ></textarea>
           </mat-card>
           <mat-action-row>
-            <button mat-raised-button color="primary" class="button-content">Guardar</button>
+            <button mat-raised-button color="primary" (click)="save()" class="button-content">Guardar</button>
           </mat-action-row>
         </div>
         <div fxFlex>
@@ -24,6 +21,5 @@
     <mat-tab label="Visor"><app-graph-unit></app-graph-unit></mat-tab>
   </mat-tab-group>
 </mat-card>
-
 
 <router-outlet></router-outlet>
