--- a/src/app/teacher/graph-unit/graph-unit.component.html
+++ b/src/app/teacher/graph-unit/graph-unit.component.html
@@ -12,7 +12,9 @@
       <mat-grid-list cols="6" rowHeight="2:1">
         <mat-grid-tile [colspan]=1 id="col-title-not-related">Unidades sin relacionar</mat-grid-tile>
         <mat-grid-tile [colspan]=5 class="units-card scroll">
-          <app-units-not-related [nodes]="nodesNotRelated"></app-units-not-related>
+          <div class ="nodes-not-related">
+              <app-units-not-related [nodes]="nodesNotRelated"></app-units-not-related>
+          </div>
         </mat-grid-tile>
       </mat-grid-list>
     </mat-card>
