--- a/src/app/teacher/exercise-unit/exercise-unit.component.html
+++ b/src/app/teacher/exercise-unit/exercise-unit.component.html
@@ -1,4 +1,4 @@
-<mat-card class="mat-card-exercise">
+<mat-card>
   <mat-tab-group>
     <mat-tab label="Ejercicio">
       <div class="layout-alignment"></div>
