--- a/src/app/teacher/video-unit/video-unit.component.html
+++ b/src/app/teacher/video-unit/video-unit.component.html
@@ -1,29 +1,25 @@
-<mat-accordion>
-  <mat-expansion-panel>
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-       VIDEOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOSSSSSSSSSSSSSSSSS
-      </mat-panel-title>
-    </mat-expansion-panel-header>
-    <textarea matInput placeholder="Unidad: "></textarea>
-    <mat-action-row>
-      <button mat-raised-button color="primary" class="button-content">Guardar</button>
-    </mat-action-row>
-  </mat-expansion-panel>
-</mat-accordion>
-<mat-expansion-panel [expanded]="0">
-  <mat-expansion-panel-header>
-    <mat-panel-title>
-      Itinerarios
-    </mat-panel-title>
-  </mat-expansion-panel-header>
+<mat-card class="mat-card-exercise">
   <mat-tab-group>
-
-    <mat-tab>
-      <ng-template mat-tab-label>
-          <button  mat-raised-button color="primary" class="button-content"><mat-icon>add_circle_outline</mat-icon></button>
-      </ng-template>
+    <mat-tab label="Transparencia">
+      <div class="layout-alignment"></div>
+      <div fxLayout="row" fxLayoutGap="20px">
+        <div fxFlex>
+          <mat-card class="view-exercise">
+            <textarea matInput placeholder="Contenido" ></textarea>
+          </mat-card>
+          <mat-action-row>
+            <button mat-raised-button color="primary" class="button-content">Guardar</button>
+          </mat-action-row>
+        </div>
+        <div fxFlex>
+          <mat-card class="view-exercise">
+            <!-- VISOR DE EJERCICIOS-->
+          </mat-card>
+        </div>
+      </div>
     </mat-tab>
+    <mat-tab label="Visor"><app-graph-unit></app-graph-unit></mat-tab>
   </mat-tab-group>
-</mat-expansion-panel>
+</mat-card>
+
 <router-outlet></router-outlet>
